removed borders and fixed overflow issue showing whitespace on right side of page

--- a/css/index.css
+++ b/css/index.css
@@ -170,6 +170,11 @@ html {
   font-family: Roboto, Arial, sans-serif;
   background: #FFFFFF;
 }
+html,
+body,
+.main {
+  overflow-x: hidden;
+}
 p {
   font-size: 1.6rem;
   line-height: 2.4rem;
@@ -347,7 +352,6 @@ footer .bottom-foot p {
   justify-content: center;
   align-content: center;
   margin: 20px 0;
-  border: 2px solid red;
 }
 .main .home .bottom-content .projects {
   align-self: center;
@@ -356,21 +360,17 @@ footer .bottom-foot p {
   align-items: flex-end;
   width: 90%;
   margin-bottom: 58px;
-  border: 2px solid yellow;
 }
 .main .home .bottom-content .projects h3 {
   align-self: flex-start;
-  border: 2px solid orange;
 }
 .main .home .bottom-content .projects .block {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
   margin-bottom: 50px;
-  border: 2px solid green;
 }
 .main .home .bottom-content .projects .block .overlay {
-  border: 2px solid blue;
   display: flex;
   justify-content: flex-end;
 }
@@ -404,7 +404,6 @@ footer .bottom-foot p {
   flex-wrap: wrap;
   width: 53%;
   padding-top: 9%;
-  border: 2px solid purple;
 }
 .main .home .bottom-content .projects .block .text-content p {
   font-size: 1.8rem;
