--- a/less/global.less
+++ b/less/global.less
@@ -14,6 +14,12 @@ html {
     background: @white;
 }
 
+html,
+body,
+.main {
+    overflow-x: hidden; 
+}
+
 p {
     font-size: 1.6rem;
     line-height: 2.4rem;
