--- a/less/home.less
+++ b/less/home.less
@@ -80,7 +80,7 @@
          justify-content: center;
           align-content: center;
           margin: 20px 0;
-          border: 2px solid red;
+         
            
            
 
@@ -95,11 +95,11 @@
                 width: 90%;
                margin-bottom: 58px;
                // padding: 7px 35px;
-               border: 2px solid yellow;
+             
                
                h3 {
                 align-self: flex-start;
-                border: 2px solid orange;
+               
             }
 
                
@@ -110,11 +110,11 @@
                     flex-wrap: wrap;
                     justify-content: space-evenly;
                     margin-bottom: 50px;
-                    border: 2px solid green;
+                    
 
                     .overlay {
 
-                        border: 2px solid blue;
+                       
     
                         display: flex;
                         justify-content: flex-end;
@@ -149,7 +149,7 @@
                         width: 53%;
                       //  margin: 0 15% 20%;
                         padding-top: 9%;
-                        border: 2px solid purple;
+                        
 
                        p {
                            font-size: 1.8rem;
